--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-<title>test</title>
+<meta charset='utf-8'>
+<title>テスト</title>
 </head>
 <body>
-<h1>TEST</h1>
-<p>This is test.</p>
+<h1>テスト</h1>
+<p>これはテストです.</p>
 </body>
 </html>
