--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
 <h1>テスト</h1>
 <p>これはテストです.</p>
+<iframe src="joeyoji.github.io/sample.pdf" width="100%" height="100%"></iframe>
 </body>
 </html>
