--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 <h1>テスト</h1>
 <p>これはテストです.</p>
-<iframe src="RC_and_GF.pdf" width="80%" height="80%"></iframe>
+<iframe src="rcgf.pdf" width="80%" height="80%"></iframe>
 </body>
 </html>
