--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 <h1>テスト</h1>
-<p>これはテストです.</p>
+<p>以下のpdfはFoundations of Machine Learningの第３章前半
+について日本語でまとめたものです.
+</p>
 <iframe src="rcgf.pdf" width="80%" height="80%"></iframe>
 </body>
 </html>
