--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 <h1>テスト</h1>
-<p>以下のpdfはFoundations of Machine Learningの第３章前半
-について日本語でまとめたものです.
+<p>以下のpdfはFoundations of Machine Learningの第３章前半について日本語でまとめたものです.<br>
+本編ではラデマッハ複雑度と成長関数について定義や定理が述べられています.<br>
+このpdfオリジナルの要素として同心球クラスのラデマッハ複雑度を求めています.
 </p>
 <iframe src="rcgf.pdf" width="80%" height="80%"></iframe>
 </body>
