--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 <meta charset='utf-8'>
-<title>テスト</title>
+<title>ドキュメント録</title>
 </head>
 <body>
-<h1>テスト</h1>
-<p>以下のpdfはFoundations of Machine Learningの第３章前半について日本語でまとめたものです.<br>
-本編ではラデマッハ複雑度と成長関数について定義や定理が述べられています.<br>
-このpdfオリジナルの要素として同心球クラスのラデマッハ複雑度を求めています.
+<h1>ドキュメント録</h1>
+<p>以下のpdfはFoundations of Machine Learningの第３章前半について日本語でまとめたもので,<br>
+ラデマッハ複雑度及び成長関数の定義や定理について書かれています.<br>
+本編にはないオリジナルの要素として同心球クラスのラデマッハ複雑度を求めています.
 </p>
 <iframe src="rcgf.pdf" width="80%" height="80%"></iframe>
 </body>
