--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 <meta charset='utf-8'>
-<title>ドキュメント録</title>
+<title>ドキュメント</title>
 </head>
 <body>
-<h1>ドキュメント録</h1>
+<h1>ドキュメント</h1>
 <p>以下のpdfはFoundations of Machine Learningの第３章前半について日本語でまとめたもので,<br>
 ラデマッハ複雑度及び成長関数の定義や定理について書かれています.<br>
 本編にはないオリジナルの要素として同心球クラスのラデマッハ複雑度を求めています.
