--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 ラデマッハ複雑度及び成長関数の定義や定理について書かれています.<br>
 本編にはないオリジナルの要素として同心球クラスのラデマッハ複雑度を求めています.
 </p>
-<iframe src="rcgf.pdf" width="80%" height="80%"></iframe>
+<iframe src="rcgf.pdf" width="80%" height="80%">fml_japanese</iframe>
+<p>また以上のpdfの補足資料が以下のpdfになります.</p>
+<iframe src="rcgfsupp.pdf" width="80%" height="80%">fml_japanese</iframe>
 </body>
 </html>
