--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
 </head>
 <body>
 <h1>ドキュメント</h1>
-<p>以下のpdfはFoundations of Machine Learningの第３章前半について日本語でまとめたもので,<br>
+<h3>Foundations of Machine Learning第３章前半</h3>
+<p>このpdfはFoundations of Machine Learningの第３章前半について日本語でまとめたもので,<br>
 ラデマッハ複雑度及び成長関数の定義や定理について書かれています.<br>
 本編にはないオリジナルの要素として同心球クラスのラデマッハ複雑度を求めています.
 </p>
-<iframe src="rcgf.pdf" width="80%" height="80%">fml_japanese</iframe>
-<p>また以上のpdfの補足資料が以下のpdfになります.</p>
-<iframe src="rcgfsupp.pdf" width="80%" height="80%">fml_japanese</iframe>
+<iframe src="rcgf.pdf" width="80%" height="80%"></iframe>
+<p>また以上のpdfの補足資料もあります.</p>
+<iframe src="rcgfsupp.pdf" width="80%" height="80%"></iframe>
+<h3>ベイズ深層学習第３章後半</h3>
+<p>このpdfはベイズ深層学習の第３章後半についてまとめたもので,<br>
+主にベイズ線形回帰について書かれています.</p>
+<iframe src="bdl.pdf" width="80%" height="80%"></iframe>
 </body>
 </html>
