--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <iframe src="rcgfsupp.pdf" width="80%" height="80%"></iframe>
 <h3>ベイズ深層学習第３章後半</h3>
 <p>このpdfはベイズ深層学習の第３章後半についてまとめたもので,<br>
-主にベイズ線形回帰について書かれています.</p>
+主にベイズ線形回帰について書かれています.<br>
+本編よりも数学的に厳密に扱っています.</p>
 <iframe src="bdl.pdf" width="80%" height="80%"></iframe>
 </body>
 </html>
