--- a/index.html
+++ b/index.html
@@ -2,19 +2,31 @@
 <head>
 <meta charset='utf-8'>
 <title>ドキュメント</title>
+<link rel="stylesheet"
+      type="text/css"
+      href="mystyle.css">
 </head>
 <body>
 <h1>ドキュメント</h1>
-<h3>Foundations of Machine Learning第３章前半</h3>
-<p>このpdfはFoundations of Machine Learningの第３章前半について日本語でまとめたもので,<br>
+<p>このページは自身が過去にまとめたドキュメントについて掲載しております.<br>
+基本的には元の文献よりも多少深掘りしてあります.
+<ul>
+	<li><a href="#fml">Foundations of Machine Learning第３章前半</a></li>
+	<li><a href="#bdl">ベイズ深層学習第３章後半</a></li>
+</ul>
+</p>
+<h3><a name="fml">Foundations of Machine Learning第３章前半</a></h3>
+<p>このpdfは<a href="https://cs.nyu.edu/~mohri/mlbook/">Foundations of Machine Learning</a>
+の第３章前半について日本語でまとめたもので,<br>
 ラデマッハ複雑度及び成長関数の定義や定理について書かれています.<br>
-本編にはないオリジナルの要素として同心球クラスのラデマッハ複雑度を求めています.
+本編にはない要素として同心球クラスのラデマッハ複雑度を求めています.
 </p>
 <iframe src="rcgf.pdf" width="80%" height="80%"></iframe>
-<p>また以上のpdfの補足資料もあります.</p>
+<p>また補足資料のpdfもあります.</p>
 <iframe src="rcgfsupp.pdf" width="80%" height="80%"></iframe>
-<h3>ベイズ深層学習第３章後半</h3>
-<p>このpdfはベイズ深層学習の第３章後半についてまとめたもので,<br>
+<h3><a name="bdl">ベイズ深層学習第３章後半</a></h3>
+<p>このpdfは<a href="https://www.kspub.co.jp/book/detail/5168707.html">ベイズ深層学習</a>
+の第３章後半についてまとめたもので,<br>
 主にベイズ線形回帰について書かれています.<br>
 本編よりも数学的に厳密に扱っています.</p>
 <iframe src="bdl.pdf" width="80%" height="80%"></iframe>
