--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>ドキュメント</h1>
-<p>このページは自身が過去にまとめたドキュメントについて掲載しております.<br>
+<p>このページは自身が過去にまとめたドキュメントを掲載しております.<br>
 基本的には元の文献よりも多少深掘りしてあります.
 <ul>
 	<li><a href="#fml">Foundations of Machine Learning第３章前半</a></li>
@@ -19,16 +19,18 @@
 <p>このpdfは<a href="https://cs.nyu.edu/~mohri/mlbook/">Foundations of Machine Learning</a>
 の第３章前半について日本語でまとめたもので,<br>
 ラデマッハ複雑度及び成長関数の定義や定理について書かれています.<br>
-本編にはない要素として同心球クラスのラデマッハ複雑度を求めています.
+本編にはない要素として同心球クラスのラデマッハ複雑度と成長関数を求めています.<br>
+特にラデマッハ複雑度については計算が困難な場合が多いので,<br>
+同心球クラスのようにラデマッハ複雑度が厳密に求まるのは極めて稀な例です.
 </p>
 <iframe src="rcgf.pdf" width="80%" height="80%"></iframe>
-<p>また補足資料のpdfもあります.</p>
+<p>また補足資料のpdfもあります.参考文献の証明を補っていたり,演習問題の回答も用意しています.</p>
 <iframe src="rcgfsupp.pdf" width="80%" height="80%"></iframe>
 <h3><a name="bdl">ベイズ深層学習第３章後半</a></h3>
 <p>このpdfは<a href="https://www.kspub.co.jp/book/detail/5168707.html">ベイズ深層学習</a>
 の第３章後半についてまとめたもので,<br>
 主にベイズ線形回帰について書かれています.<br>
-本編よりも数学的に厳密に扱っています.</p>
+本編よりも数学的に(厳密に)議論しており更に数値実験も豊富に行っています.</p>
 <iframe src="bdl.pdf" width="80%" height="80%"></iframe>
 </body>
 </html>
