--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
 <body>
 <h1>ドキュメント</h1>
 <p>このページは自身が過去にまとめたドキュメントを掲載しております.<br>
-基本的には元の文献よりも多少深掘りしてあります.
+基本的には元の文献よりも多少深掘りしてあります.</p>
 <ul>
 	<li><a href="#fml">Foundations of Machine Learning第３章前半</a></li>
 	<li><a href="#bdl">ベイズ深層学習第３章後半</a></li>
 </ul>
-</p>
 <h3><a name="fml">Foundations of Machine Learning第３章前半</a></h3>
 <p>このpdfは<a href="https://cs.nyu.edu/~mohri/mlbook/">Foundations of Machine Learning</a>
 の第３章前半について日本語でまとめたもので,<br>
 ラデマッハ複雑度及び成長関数の定義や定理について書かれています.<br>
 本編にはない要素として同心球クラスのラデマッハ複雑度と成長関数を求めています.<br>
 特にラデマッハ複雑度については計算が困難な場合が多いので,<br>
-同心球クラスのようにラデマッハ複雑度が厳密に求まるのは極めて稀な例です.
+同心球クラスのようにラデマッハ複雑度が厳密に求まるのは稀な例です.
 </p>
 <iframe src="rcgf.pdf" width="80%" height="80%"></iframe>
 <p>また補足資料のpdfもあります.参考文献の証明を補っていたり,演習問題の回答も用意しています.</p>
