--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
 特にラデマッハ複雑度については計算が困難な場合が多いので,<br>
 同心球クラスのようにラデマッハ複雑度が厳密に求まるのは稀な例です.
 </p>
-<iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/rcgf.pdf&embedded=true" width="80%" height="80%"></iframe>
+<iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/rcgf.pdf&embedded=true"
+	width="50%" height="60%"></iframe>
 <p>また補足資料のpdfもあります.参考文献の証明を補っていたり,演習問題の回答も用意しています.</p>
-<iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/rcgfsupp.pdf&embedded=true" width="80%" height="80%"></iframe>
+<iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/rcgfsupp.pdf&embedded=true"
+	width="50%" height="100%"></iframe>
 <h3><a name="bdl">ベイズ深層学習第３章後半</a></h3>
 <p>このpdfは<a href="https://www.kspub.co.jp/book/detail/5168707.html">ベイズ深層学習</a>
 の第３章後半についてまとめたもので,<br>
 主にベイズ線形回帰について書かれています.<br>
 本編よりも数学的に(厳密に)議論しており更に数値実験も豊富に行っています.</p>
-<iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/bdl.pdf&embedded=true" width="80%" height="80%"></iframe>
+<iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/bdl.pdf&embedded=true"
+	width="50%" height="60%"></iframe>
 </body>
 </html>
