--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </p>
 <iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/rcgf.pdf&embedded=true"
 	width="50%" height="60%"></iframe>
-<p>また補足資料のpdfもあります.参考文献の証明を補っていたり,演習問題の回答も用意しています.</p>
+<p>また補足資料のpdfもあります.参考文献の証明を補っていたり,演習問題の解答も用意しています.</p>
 <iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/rcgfsupp.pdf&embedded=true"
 	width="50%" height="100%"></iframe>
 <h3><a name="bdl">ベイズ深層学習第３章後半</a></h3>
