--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <h1>ドキュメント</h1>
 <p>このページは自身が過去にまとめたドキュメントを掲載しております.<br>
 基本的には元の文献よりも多少深掘りしてあります.</p>
+<script type="text/javascript">
+	window.alert("hello,world!");
+</script>
 <ul>
 	<li><a href="#fml">Foundations of Machine Learning第３章前半</a></li>
 	<li><a href="#bdl">ベイズ深層学習第３章後半</a></li>
