--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 <h1>ドキュメント</h1>
 <p>このページは自身が過去にまとめたドキュメントを掲載しております.<br>
 基本的には元の文献よりも多少深掘りしてあります.</p>
-<script type="text/javascript">
-	window.alert("hello,world!");
-</script>
 <ul>
 	<li><a href="#fml">Foundations of Machine Learning第３章前半</a></li>
 	<li><a href="#bdl">ベイズ深層学習第３章後半</a></li>
@@ -37,5 +34,7 @@
 本編よりも数学的に(厳密に)議論しており更に数値実験も豊富に行っています.</p>
 <iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/bdl.pdf&embedded=true"
 	width="50%" height="60%"></iframe>
+
+<script type="text/javascript" src="helloworld.js"></script>
 </body>
 </html>
