--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet"
       type="text/css"
       href="mystyle.css">
+<link rel="icon" type="image/png" href="octocat.png">
 </head>
 <body>
 <h1>ドキュメント</h1>
