--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet"
       type="text/css"
       href="mystyle.css">
-<link rel="icon" type="image/png" href="pageicon.png">
+<link rel="icon" type="image/png" href="pageicon.png"><!--for browser-->
+<link rel="apple-touch-icon" size="180x180" href="pageicon.ong"><!--for smartphone-->
 </head>
 <body>
 <h1>ドキュメント</h1>
