--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet"
       type="text/css"
       href="mystyle.css">
-<link rel="shortcut icon" href="pageicon.ico">
+<link rel="shortcut icon" href="pageicon.ico" type="image-xicon">
 </head>
 <body>
 <h1>ドキュメント</h1>
