--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
       type="text/css"
       href="mystyle.css">
 <link rel="shortcut icon" href="pageicon.ico" type="image/x-icon">
-<link rel="icon" href="pageicon.png" size="32x32">
-<link rel="icon" href="pageicon.png" size="48x48">
-<link rel="icon" href="pageicon.png" size="96x96">
-<link rel="icon" href="pageicon.png" size="144x144">
+<link rel="icon" href="octocat32.png" size="32x32">
+<link rel="icon" href="octocat48.png" size="48x48">
+<link rel="icon" href="octocat96.png" size="96x96">
+<link rel="icon" href="octocat144.png" size="144x144">
 
 </head>
 <body>
