--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet"
       type="text/css"
       href="mystyle.css">
-<link rel="shortcut icon" href="pageicon.ico" type="image/x-icon">
+<link rel="icon" href="octocat.ico" type="image/x-icon">
 <link rel="icon" href="octocat32.png" size="32x32">
 <link rel="icon" href="octocat48.png" size="48x48">
 <link rel="icon" href="octocat96.png" size="96x96">
