--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <link rel="stylesheet"
       type="text/css"
       href="mystyle.css">
-<link rel="icon" href="icons/octocat.ico" type="image/x-icon">
-<link rel="icon" href="icons/octocat32.png" size="32x32">
-<link rel="icon" href="icons/octocat48.png" size="48x48">
-<link rel="icon" href="icons/octocat96.png" size="96x96">
-<link rel="icon" href="icons/octocat144.png" size="144x144">
+<link rel="icon" href="ICONS/octocat.ico" type="image/x-icon">
+<link rel="icon" href="ICONS/octocat32.png" size="32x32">
+<link rel="icon" href="ICONS/octocat48.png" size="48x48">
+<link rel="icon" href="ICONS/octocat96.png" size="96x96">
+<link rel="icon" href="ICONS/octocat144.png" size="144x144">
 
 </head>
 <body>
