--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta charset='utf-8'>
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>ドキュメント</title>
 <link rel="stylesheet"
       type="text/css"
@@ -10,7 +11,6 @@
 <link rel="icon" href="ICONimg/octocat48.png" size="48x48">
 <link rel="icon" href="ICONimg/octocat96.png" size="96x96">
 <link rel="icon" href="ICONimg/octocat144.png" size="144x144">
-
 </head>
 <body>
 <h1>ドキュメント</h1>
@@ -28,8 +28,10 @@
 特にラデマッハ複雑度については計算が困難な場合が多いので,<br>
 同心球クラスのようにラデマッハ複雑度が厳密に求まるのは稀な例です.
 </p>
+<div class="beamer">
 <iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/docs/rcgf.pdf&embedded=true"
-	width="50%" height="60%"></iframe>
+	width=600 height=450></iframe>
+</div>
 <p>また補足資料のpdfもあります.参考文献の証明を補っていたり,演習問題の解答も用意しています.</p>
 <iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/docs/rcgfsupp.pdf&embedded=true"
 	width="50%" height="100%"></iframe>
@@ -38,8 +40,10 @@
 の第３章後半についてまとめたもので,<br>
 主にベイズ線形回帰について書かれています.<br>
 本編よりも数学的に(厳密に)議論しており更に数値実験も豊富に行っています.</p>
+<div class="beamer">
 <iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/docs/bdl.pdf&embedded=true"
-	width="50%" height="60%"></iframe>
+	width=600 height=450></iframe>
+</div>
 
 <script type="text/javascript" src="helloworld.js"></script>
 </body>
