--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 	width=600 height=450></iframe>
 </div>
 <p>また補足資料のpdfもあります.参考文献の証明を補っていたり,演習問題の解答も用意しています.</p>
+<div class="jsarticle">
 <iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/docs/rcgfsupp.pdf&embedded=true"
-	width="50%" height="100%"></iframe>
+	width=600 height=840></iframe>
+</div>
 <h3><a name="bdl">ベイズ深層学習第３章後半</a></h3>
 <p>このpdfは<a href="https://www.kspub.co.jp/book/detail/5168707.html">ベイズ深層学習</a>
 の第３章後半についてまとめたもので,<br>
