--- a/fml.html
+++ b/fml.html
@@ -13,14 +13,7 @@
 <link rel="icon" href="ICONimg/octocat144.png" size="144x144">
 </head>
 <body>
-<h1>ドキュメント</h1>
-<p>このページは自身が過去にまとめたドキュメントを掲載しております.<br>
-基本的には元の文献よりも多少深掘りしてあります.</p>
-<ul>
-	<li><a href="#fml">Foundations of Machine Learning第３章前半</a></li>
-	<li><a href="#bdl">ベイズ深層学習第３章後半</a></li>
-</ul>
-<h3><a name="fml">Foundations of Machine Learning第３章前半</a></h3>
+<h2>Foundations of Machine Learning第３章前半</h2>
 <p>このpdfは<a href="https://cs.nyu.edu/~mohri/mlbook/">Foundations of Machine Learning</a>
 の第３章前半について日本語でまとめたもので,<br>
 ラデマッハ複雑度及び成長関数の定義や定理について書かれています.<br>
@@ -37,16 +30,7 @@
 <iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/docs/rcgfsupp.pdf&embedded=true"
 	width=600 height=840></iframe>
 </div>
-<h3><a name="bdl">ベイズ深層学習第３章後半</a></h3>
-<p>このpdfは<a href="https://www.kspub.co.jp/book/detail/5168707.html">ベイズ深層学習</a>
-の第３章後半についてまとめたもので,<br>
-主にベイズ線形回帰について書かれています.<br>
-本編よりも数学的に(厳密に)議論しており更に数値実験も豊富に行っています.</p>
-<div class="beamer">
-<iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/docs/bdl.pdf&embedded=true"
-	width=600 height=450></iframe>
-</div>
-
+<p><a href="index.html">ホームに戻る</a></p>
 <script type="text/javascript" src="helloworld.js"></script>
 </body>
 </html>
