--- a/index.html
+++ b/index.html
@@ -17,36 +17,9 @@
 <p>このページは自身が過去にまとめたドキュメントを掲載しております.<br>
 基本的には元の文献よりも多少深掘りしてあります.</p>
 <ul>
-	<li><a href="#fml">Foundations of Machine Learning第３章前半</a></li>
-	<li><a href="#bdl">ベイズ深層学習第３章後半</a></li>
+	<li><a href="fml.html">Foundations of Machine Learning第３章前半</a></li>
+	<li><a href="bdl.html">ベイズ深層学習第３章後半</a></li>
 </ul>
-<h3><a name="fml">Foundations of Machine Learning第３章前半</a></h3>
-<p>このpdfは<a href="https://cs.nyu.edu/~mohri/mlbook/">Foundations of Machine Learning</a>
-の第３章前半について日本語でまとめたもので,<br>
-ラデマッハ複雑度及び成長関数の定義や定理について書かれています.<br>
-本編にはない要素として同心球クラスのラデマッハ複雑度と成長関数を求めています.<br>
-特にラデマッハ複雑度については計算が困難な場合が多いので,<br>
-同心球クラスのようにラデマッハ複雑度が厳密に求まるのは稀な例です.
-</p>
-<div class="beamer">
-<iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/docs/rcgf.pdf&embedded=true"
-	width=600 height=450></iframe>
-</div>
-<p>また補足資料のpdfもあります.参考文献の証明を補っていたり,演習問題の解答も用意しています.</p>
-<div class="jsarticle">
-<iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/docs/rcgfsupp.pdf&embedded=true"
-	width=600 height=840></iframe>
-</div>
-<h3><a name="bdl">ベイズ深層学習第３章後半</a></h3>
-<p>このpdfは<a href="https://www.kspub.co.jp/book/detail/5168707.html">ベイズ深層学習</a>
-の第３章後半についてまとめたもので,<br>
-主にベイズ線形回帰について書かれています.<br>
-本編よりも数学的に(厳密に)議論しており更に数値実験も豊富に行っています.</p>
-<div class="beamer">
-<iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/docs/bdl.pdf&embedded=true"
-	width=600 height=450></iframe>
-</div>
-
 <script type="text/javascript" src="helloworld.js"></script>
 </body>
 </html>
