--- a/bdl.html
+++ b/bdl.html
@@ -13,6 +13,7 @@
 <link rel="icon" href="ICONimg/octocat144.png" size="144x144">
 </head>
 <body>
+<p><a href="index.html">ホームに戻る</a></p>
 <h2><a name="bdl">ベイズ深層学習第３章後半</a></h2>
 <p>このpdfは<a href="https://www.kspub.co.jp/book/detail/5168707.html">ベイズ深層学習</a>
 の第３章後半についてまとめたもので,<br>
@@ -23,6 +24,11 @@
 	width=600 height=450></iframe>
 </div>
 <p><a href="index.html">ホームに戻る</a></p>
+<div class="foot_note">
+<hr>
+<p>※現在pdfの埋め込みについてはgoogle documentを採用していますが<br>
+読み込みが出来ない場合があります.そのときは何回かページを更新してみてください.</p>
+</div>
 <script type="text/javascript" src="helloworld.js"></script>
 </body>
 </html>
