--- a/fml.html
+++ b/fml.html
@@ -13,6 +13,7 @@
 <link rel="icon" href="ICONimg/octocat144.png" size="144x144">
 </head>
 <body>
+<p><a href="index.html">ホームに戻る</a></p>
 <h2>Foundations of Machine Learning第３章前半</h2>
 <p>このpdfは<a href="https://cs.nyu.edu/~mohri/mlbook/">Foundations of Machine Learning</a>
 の第３章前半について日本語でまとめたもので,<br>
@@ -31,6 +32,11 @@
 	width=600 height=840></iframe>
 </div>
 <p><a href="index.html">ホームに戻る</a></p>
+<div class="foot_note">
+<hr>
+<p>※現在pdfの埋め込みについてはgoogle documentを採用していますが<br>
+読み込みが出来ない場合があります.そのときは何回かページを更新してみてください.</p>
+</div>
 <script type="text/javascript" src="helloworld.js"></script>
 </body>
 </html>
