--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 	<li><a href="fml.html">Foundations of Machine Learning第３章前半</a></li>
 	<li><a href="bdl.html">ベイズ深層学習第３章後半</a></li>
 </ul>
+<div class="foot_note">
+<hr>
+<p>※現在pdfの埋め込みについてはgoogle documentを採用していますが<br>
+読み込みが出来ない場合があります.そのときは何回かページを更新してみてください.</p>
+</div>
 <script type="text/javascript" src="helloworld.js"></script>
 </body>
 </html>
