--- a/bdl.html
+++ b/bdl.html
@@ -11,6 +11,7 @@
 <link rel="icon" href="ICONimg/octocat48.png" size="48x48">
 <link rel="icon" href="ICONimg/octocat96.png" size="96x96">
 <link rel="icon" href="ICONimg/octocat144.png" size="144x144">
+<script language="javascript" src="footer.js"></script>
 </head>
 <body>
 <p><a href="index.html">ホームに戻る</a></p>
@@ -23,12 +24,6 @@
 <iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/docs/bdl.pdf&embedded=true"
 	width=600 height=450></iframe>
 </div>
-<p><a href="index.html">ホームに戻る</a></p>
-<div class="foot_note">
-<hr>
-<p>※現在pdfの埋め込みについてはgoogle documentを採用していますが<br>
-読み込みが出来ない場合があります.そのときは何回かページを更新してみてください.</p>
-</div>
-<script type="text/javascript" src="helloworld.js"></script>
+<script>footer();</script>
 </body>
 </html>
