--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="icon" href="ICONimg/octocat48.png" size="48x48">
 <link rel="icon" href="ICONimg/octocat96.png" size="96x96">
 <link rel="icon" href="ICONimg/octocat144.png" size="144x144">
+<script language="javascript" src="footer.js"></script>
 </head>
 <body>
 <h1>ドキュメント</h1>
@@ -20,11 +21,6 @@
 	<li><a href="fml.html">Foundations of Machine Learning第３章前半</a></li>
 	<li><a href="bdl.html">ベイズ深層学習第３章後半</a></li>
 </ul>
-<div class="foot_note">
-<hr>
-<p>※現在pdfの埋め込みについてはgoogle documentを採用していますが<br>
-読み込みが出来ない場合があります.そのときは何回かページを更新してみてください.</p>
-</div>
-<script type="text/javascript" src="helloworld.js"></script>
+<script>footer();</script>
 </body>
 </html>
