name change pane

--- a/bdl.html
+++ b/bdl.html
@@ -11,7 +11,7 @@
 <link rel="icon" href="ICONimg/octocat48.png" size="48x48">
 <link rel="icon" href="ICONimg/octocat96.png" size="96x96">
 <link rel="icon" href="ICONimg/octocat144.png" size="144x144">
-<script language="javascript" src="footer.js"></script>
+<script language="javascript" src="pane.js"></script>
 </head>
 <body>
 <p><a href="index.html">ホームに戻る</a></p>
