--- a/fml.html
+++ b/fml.html
@@ -14,8 +14,8 @@
 <script language="javascript" src="pane.js"></script>
 </head>
 <body>
-<p><a href="index.html">ホームに戻る</a></p>
-<h2>Foundations of Machine Learning第３章前半</h2>
+<script>header();</script>
+<h2>Foundations of Machine Learning第３章前半(+補足資料)</h2>
 <p>このpdfは<a href="https://cs.nyu.edu/~mohri/mlbook/">Foundations of Machine Learning</a>
 の第３章前半について日本語でまとめたもので,<br>
 ラデマッハ複雑度及び成長関数の定義や定理について書かれています.<br>
