--- a/bdl.html
+++ b/bdl.html
@@ -14,7 +14,7 @@
 <script language="javascript" src="pane.js"></script>
 </head>
 <body>
-<p><a href="index.html">ホームに戻る</a></p>
+<script>header();</script>
 <h2><a name="bdl">ベイズ深層学習第３章後半</a></h2>
 <p>このpdfは<a href="https://www.kspub.co.jp/book/detail/5168707.html">ベイズ深層学習</a>
 の第３章後半についてまとめたもので,<br>
