--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <script language="javascript" src="pane.js"></script>
 </head>
 <body>
+<script>header();</script>
 <h1>ドキュメント</h1>
 <p>このページは自身が過去にまとめたドキュメントを掲載しております.<br>
 基本的には元の文献よりも多少深掘りしてあります.</p>
 <ul>
-	<li><a href="fml.html">Foundations of Machine Learning第３章前半</a></li>
+	<li><a href="fml.html">Foundations of Machine Learning第３章前半+補足資料</a></li>
 	<li><a href="bdl.html">ベイズ深層学習第３章後半</a></li>
 </ul>
 <script>footer();</script>
