--- a/fml.html
+++ b/fml.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 <script>header();</script>
+<div class="main">
 <h2>Foundations of Machine Learning第３章前半(+補足資料)</h2>
 <p>このpdfは<a href="https://cs.nyu.edu/~mohri/mlbook/">Foundations of Machine Learning</a>
 の第３章前半について日本語でまとめたもので,<br>
@@ -31,6 +32,7 @@
 <div class="jsarticle">
 <iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/docs/rcgfsupp.pdf&embedded=true"
 	width=600 height=840></iframe>
+</div>
 </div>
 <script>footer();</script>
 </body>
