--- a/bdl.html
+++ b/bdl.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 <script>header();</script>
+<div class="main">
 <h2><a name="bdl">ベイズ深層学習第３章後半</a></h2>
 <p>このpdfは<a href="https://www.kspub.co.jp/book/detail/5168707.html">ベイズ深層学習</a>
 の第３章後半についてまとめたもので,<br>
@@ -23,6 +24,7 @@
 <div class="beamer">
 <iframe src="https://docs.google.com/gview?url=https://joeyoji.github.io/docs/bdl.pdf&embedded=true"
 	width=600 height=450></iframe>
+</div>
 </div>
 <script>footer();</script>
 </body>
