--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 		of Machine Learning</a>
 		の第３章前半について日本語でまとめたもので,<br>
 		ラデマッハ複雑度及び成長関数の定義や定理について書かれています.<br>
-		本編にはない要素として同心球クラスのラデマッハ複雑度と
-		成長関数を求めています.<br>
+		本編にはない要素として同心球クラスのラデマッハ複雑度と成長関数を求めています.<br>
 		特にラデマッハ複雑度については計算が困難な場合が多いので,<br>
 		同心球クラスのようにラデマッハ複雑度が厳密に求まるのは稀な例です.<br>
-		[<a href="docs/rcgf.pdf">本編PDF</a>] 
-		[<a href="docs/rcgfsupp.pdf">補足資料PDF</a>]
+		本編の補足資料もあります.<br>
+		[<a href="docs/rcgf.pdf">本編PDF(360x270)</a>] 
+		[<a href="docs/rcgfsupp.pdf">補足資料PDF(600x840)</a>]
 		</p></li>
 	<li><p><em>ベイズ深層学習第３章後半</em><br>
 		これは
@@ -39,7 +39,7 @@
 		の第３章後半についてまとめたもので,<br>
 		主にベイズ線形回帰について書かれています.<br>
 		本編よりも数学的に(厳密に)議論しており更に数値実験も豊富に行っています.<br>
-		[<a href="docs/bdl.pdf">PDF</a>]
+		[<a href="docs/bdl.pdf">PDF(360x270)</a>]
 		</p></li>
 </ol>
 </div>
