--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 		特にラデマッハ複雑度については計算が困難な場合が多いので,<br>
 		同心球クラスのようにラデマッハ複雑度が厳密に求まるのは稀な例です.<br>
 		また補足資料もあります.<br>
-		[<a href="docs/rcgf.pdf">PDF(360x270)</a>] 
-		[<a href="docs/rcgfsupp.pdf">補足PDF(600x840)</a>]
+		[<a href="docs/fml.pdf">PDF(360x270)</a>] 
+		[<a href="docs/fmlsupp.pdf">補足PDF(600x840)</a>]
 		</p></li>
 	<li><p><em>ベイズ深層学習第３章後半</em><br>
 		これは
