--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset='utf-8'>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ドキュメント</title>
+<title>joeyojiのホームページ</title>
 <link rel="stylesheet"
       type="text/css"
       href="mystyle.css">
@@ -16,32 +16,15 @@
 <body>
 <script>header();</script>
 <div class="main">
-<h1>ドキュメント</h1>
-<p>このページは自身が過去にまとめたドキュメントを掲載しております.<br>
-基本的には元の文献よりも多少深掘りしてあります.</p>
-<ol>
-	<li><p><em>Foundations of Machine Learning第３章前半</em><br>
-		これは
-		<a href="https://cs.nyu.edu/~mohri/mlbook/">Foundations
-		of Machine Learning</a>
-		の第３章前半について日本語でまとめたもので,<br>
-		ラデマッハ複雑度及び成長関数の定義や定理について書かれています.<br>
-		本編にはない要素として同心球クラスのラデマッハ複雑度と成長関数を求めています.<br>
-		特にラデマッハ複雑度については計算が困難な場合が多いので,<br>
-		同心球クラスのようにラデマッハ複雑度が厳密に求まるのは稀な例です.<br>
-		また補足資料もあります.<br>
-		[<a href="docs/fml.pdf">PDF(360x270)</a>] 
-		[<a href="docs/fmlsupp.pdf">補足PDF(600x840)</a>]
+<h1>joeyojiのホームページ</h1>
+<p>joeyojiのホームページです.</p>
+<ul>
+	<li><p><em><a href="docs.html">ドキュメント</a></em><br>
+		自身が過去にまとめたドキュメントを掲載しております.
 		</p></li>
-	<li><p><em>ベイズ深層学習第３章後半</em><br>
-		これは
-		<a href="https://www.kspub.co.jp/book/detail/5168707.html">ベイズ深層学習</a>
-		の第３章後半についてまとめたもので,<br>
-		主にベイズ線形回帰について書かれています.<br>
-		本編よりも数学的に(厳密に)議論しており更に数値実験も豊富に行っています.<br>
-		[<a href="docs/bdl.pdf">PDF(360x270)</a>]
+	<li><p><em>調整中</em><br>
 		</p></li>
-</ol>
+</ul>
 </div>
 <script>footer();</script>
 </body>
