--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		自身が過去にまとめたドキュメントを掲載しております.
 		</p></li>
 	<li><p><em><a href="trpg.html">TRPG</a></em><br>
-		</p></li>
+		このサイトで最終実装はしません.テスト用です.</p></li>
 </ul>
 </div>
 <script>footer();</script>
