--- a/link.html
+++ b/link.html
@@ -1,9 +1,9 @@
-<
-tml>
+<!DOCTYPE html>
+<html>
 <head>
 <meta charset='utf-8'>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>joeyojiのホームページ</title>
+<title>リンク</title>
 <link rel="stylesheet"
       type="text/css"
       href="mystyle.css">
@@ -13,18 +13,17 @@ tml>
 <link rel="icon" href="ICONimg/octocat96.png" size="96x96">
 <link rel="icon" href="ICONimg/octocat144.png" size="144x144">
 <script language="javascript" src="pane.js"></script>
+<script language="javascript" src="game.js"></script>
 </head>
 <body>
 <script>header();</script>
 <div class="main">
-<h1>joeyojiのホームページ</h1>
-<p>joeyojiのホームページです.</p>
+<h1>リンク</h1>
 <ul>
-	<li><p><em><a href="docs.html">ドキュメント</a></em><br>
-		自身が過去にまとめたドキュメントを掲載しております.
-		</p></li>
-	<li><p><em><a href="link.html">リンク</a></em><br>
-		他ページへのリンクです.</p></li>
+	<li><p><em><a  href="https://github.com/joeyoji">github</a></em><br>
+		githubアカウントはこちら</p></li>
+	<li><p><em><a href="https://www.kaggle.com/joehirose">kaggle</a></em><br>
+		kaggleアカウントはこちら</p></li>
 </ul>
 </div>
 <script>footer();</script>
