trpg deleted and cocdiebot change

--- a/cocdiebot.html
+++ b/cocdiebot.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset='utf-8'>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>joeyojiのホームページ</title>
+<title>cocdiebot使い方</title>
 <link rel="stylesheet"
       type="text/css"
       href="mystyle.css">
@@ -16,18 +16,7 @@
 <body>
 <script>header();</script>
 <div class="main">
-<h1>joeyojiのホームページ</h1>
-<p>joeyojiのホームページです.</p>
-<ul>
-	<li><p><em><a href="docs.html">ドキュメント</a></em><br>
-		自身が過去にまとめたドキュメントを掲載しております.
-		</p></li>
-	<li><p><em><a href="trpg.html">TRPG</a></em><br>
-		COCDIEBOTのコマンドの説明について書かれています.
-		</p></li>
-	<li><p><em><a href="link.html">リンク</a></em><br>
-		他ページへのリンクです.</p></li>
-</ul>
+<h1>COCDIEBOT使い方</h1>
 </div>
 <script>footer();</script>
 </body>
