--- a/cocdiebot.html
+++ b/cocdiebot.html
@@ -21,20 +21,29 @@
 <h3>サーバー招待からキャラ登録まで</h3>
 <ol>
 <li><a href="https://discord.com/oauth2/authorize?client_id=1010123356579823616&permissions=268443664&scope=bot">ここ</a>からCOCDIEBOTをdiscordサーバーに招待する。<br>
-　導入時に要求される権限は全て許可してください。</li>
+　-導入時に要求される権限は全て許可してください。</li>
 <li>招待したサーバーの任意のチャンネルでコマンド$initを実行する。<br>
-　これによりシークレットダイスを確認できる"#シークレットリザルト"と、<br>
+　-これによりシークレットダイスを確認できる"#シークレットリザルト"と、<br>
 　BOTが探索者のデータを読み込むための"#探索者置き場"の２つのチャンネルが作成されます。</li>
 <li><a href="https://iachara.com/">いあきゃら</a>で(７版)キャラを作成し、ココフォリア駒出力をし、クリップボードにコピーする。<br>
-　ダイスはCCで指定してください。</li>
+　-ダイスはCCで指定してください。</li>
 <li>テキストエディタなどを開いてコピーされたものを貼り付けしtxtファイルで保存する。</li>
 <li>保存されたtxtファイルをコマンド$registerとともにdiscordサーバーにアップロードする。<br>
-　これにより探索者置き場にキャラが登録されます。</li>
+　-これにより探索者置き場にキャラが登録されます。</li>
 </ol>
 </div>
 <hr>
 <h3>コマンド一覧</h3>
-
+<p>以下の説明において、[技能],[キャラ]などは実際書く場合は[]は要りません。<br>
+例えば聞き耳を振りたい場合は、 $cc [聞き耳] ではなくて $cc 聞き耳 と書けば良いです。</p>
+<ul>
+<li><h5>cc [技能] [キャラ]</h5>
+<p>1D100ダイスを振るコマンド.技能およびキャラを指定して成功判定できる.<br>
+但し技能もキャラも省略可能.両方を省略した場合単に1D100の結果が分かる.<br>
+技能を指定してキャラを省略した場合,このコマンドを実行した人が最後に登録したキャラの技能判定を行う.<br>
+技能省略のキャラ指定はキャラが技能名として認識されるため通常エラーする.</p>
+</li>
+</ul>
 <script>footer();</script>
 </body>
 </html>
