--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<li><p><em><a href="docs.html">ドキュメント</a></em><br>
 		自身が過去にまとめたドキュメントを掲載しております.
 		</p></li>
-	<li><p><em><a href="cocdiebot.html">TRPG</a></em><br>
+	<li><p><em><a href="cocdiebot.html">COCDIEBOT</a></em><br>
 		COCDIEBOTのコマンドの説明について書かれています.
 		</p></li>
 	<li><p><em><a href="link.html">リンク</a></em><br>
