--- a/cocdiebot.html
+++ b/cocdiebot.html
@@ -17,6 +17,10 @@
 <script>header();</script>
 <div class="main">
 <h1>COCDIEBOT利用説明</h1>
+本BOTは、「 株式会社アークライト  」及び「株式会社KADOKAWA」が権利を有する『新クトゥルフ神話TRPG』の二次創作物です。
+Call of Cthulhu is copyright ©1981, 2015, 2019 by Chaosium Inc. ;all rights reserved. Arranged by Arclight Inc.
+Call of Cthulhu is a registered trademark of Chaosium Inc.
+PUBLISHED BY KADOKAWA CORPORATION　「新クトゥルフ神話TRPG ルールブック」
 <hr>
 <h3>サーバー招待からキャラ登録まで</h3>
 <ol>
