--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <h1>joeyojiのホームページ</h1>
 <p>joeyojiのホームページです.</p>
 <ul>
+	<li><p><em><a href="research.html">研究</a></em><br>
+		自身が過去に研究したものを掲載しております.
+		</p></li>
 	<li><p><em><a href="docs.html">ドキュメント</a></em><br>
 		自身が過去にまとめたドキュメントを掲載しております.
 		</p></li>
