--- a/research.html
+++ b/research.html
@@ -25,10 +25,10 @@
 	統計モデルの実対数閾値を考察する際，平均誤差関数と等価な多項式を用意して<br>
 	その特異点構造を考察するのが一般的ですが，これは統計モデルごとに異なるため<br>
 	従来までは一般的な実対数閾値の公式がありませんでした。そこで本研究は<br>
-	多項式の多重指数に関する線形計画問題の最適解の逆数が実対数閾値の上界を<br>
-	与える事を示しました．これにより平均誤差関数と等価な多項式を用意できれば<br>
+	多項式の多重指数に関する線形計画問題を解くことで実対数閾値の上界を得られる<br>
+	事を示しました．これにより平均誤差関数と等価な多項式を用意できれば<br>
 	統計モデルの汎化損失の上界を求めることが比較的簡単に出来るようになりました。
-		</p></li>
+	</p></li>
 	<li><p><em><a href="https://ken.ieice.org/ken/paper/20220308ZCJ2/">
 	入力が低次元超平面上にあるときの縮小ランク回帰の実対数閾値</a></em>(2021~2022)<br>
 	縮小ランク回帰とは，三層神経回路網において活性化関数を恒等関数にしたものと等価で，<br>
