--- a/research.html
+++ b/research.html
@@ -20,6 +20,17 @@
 <p>このページは自身が過去に研究したものをまとめております.
 研究対象は主にベイズ統計の為の代数幾何です．</p>
 <ol>
+	<li><p><em><a href="https://arxiv.org/abs/2303.11619">
+	Blow-up Algorithm for Sum-of-Products Polynomials and Real Log Canonical Thresholds</a></em>(2022~2023)<br>
+	When considering a real log canonical threshold (RLCT) that gives a Bayesian generalization error,<br>
+	in general, papers replace a mean error function with a relatively simple polynomial <br>
+	whose RLCT corresponds to that of the mean error function, and obtain its RLCT by <br>
+	resolving its singularities through an algebraic operation called blow-up.<br>
+	Though it is known that the singularities of any polynomial can be resolved by a finite number of blow-up iterations,<br>
+	it is not clarified whether or not it is possible to resolve singularities of a specific polynomial <br>
+	by applying a specific blow-up algorithm. Therefore this paper considers the blow-up algorithm <br>
+	for the polynomials called sum-of-products (sop) polynomials and its RLCT.
+	</p></li>
 	<li><p><em><a href="https://ken.ieice.org/ken/paper/202303039CRv/">
 	多項式の多重指数に関する線形計画問題に基づく実対数閾値の上界</a></em>(2022~2023)<br>
 	統計モデルの実対数閾値を考察する際，平均誤差関数と等価な多項式を用意して<br>
@@ -27,7 +38,8 @@
 	従来までは一般的な実対数閾値の公式がありませんでした。そこで本研究は<br>
 	多項式の多重指数に関する線形計画問題を解くことで実対数閾値の上界を得られる<br>
 	事を示しました．これにより平均誤差関数と等価な多項式を用意できれば<br>
-	統計モデルの汎化損失の上界を求めることが比較的簡単に出来るようになりました。
+	統計モデルの汎化損失の上界を求めることが比較的簡単に出来るようになりました。<br>
+	これは上の項目の研究成果の一部を研究報告として発表したものです。
 	</p></li>
 	<li><p><em><a href="https://ken.ieice.org/ken/paper/20220308ZCJ2/">
 	入力が低次元超平面上にあるときの縮小ランク回帰の実対数閾値</a></em>(2021~2022)<br>
