--- a/docs.html
+++ b/docs.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset='utf-8'>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ドキュメント</title>
+<title>読んだ本の深掘り</title>
 <link rel="stylesheet"
       type="text/css"
       href="mystyle.css">
@@ -16,9 +16,8 @@
 <body>
 <script>header();</script>
 <div class="main">
-<h1>ドキュメント</h1>
-<p>このページは自身が過去にまとめたドキュメントを掲載しております.<br>
-基本的には元の文献よりも多少深掘りしてあります.</p>
+<h1>読んだ本の深掘り</h1>
+<p>このページは自身が過去に読んだ本を深掘りしたものを掲載しています.</p>
 <ol>
 	<li><p><em>Foundations of Machine Learning第３章前半</em><br>
 		これは
