--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<li><p><em><a href="research.html">研究</a></em><br>
 		自身が過去に研究したものを掲載しております.
 		</p></li>
-	<li><p><em><a href="docs.html">ドキュメント</a></em><br>
-		自身が過去にまとめたドキュメントを掲載しております.
+	<li><p><em><a href="docs.html">読んだ本の深掘り</a></em><br>
+		自身が過去に読んだ本の内容を深掘りしたものを掲載しております.
 		</p></li>
 	<li><p><em><a href="link.html">リンク</a></em><br>
 		他ページへのリンクです.</p></li>
