--- a/research.html
+++ b/research.html
@@ -17,8 +17,10 @@
 <script>header();</script>
 <div class="main">
 <h1>研究</h1>
-<p>このページは自身が過去に研究したものをまとめております.
-研究対象は主にベイズ統計の為の代数幾何です．</p>
+<p>このページは自身が過去に研究したものをまとめております.<br>
+研究対象は主にベイズ統計の為の代数幾何です．<br>
+東京工業大学情報理工学院数理・計算科学系渡邊澄夫研究室卒業(学士2021修士2023)
+</p>
 <ol>
 	<li><p><em><a href="https://arxiv.org/abs/2303.11619">
 	Blow-up Algorithm for Sum-of-Products Polynomials and Real Log Canonical Thresholds</a></em>(2022~2023)<br>
@@ -39,7 +41,8 @@
 	多項式の多重指数に関する線形計画問題を解くことで実対数閾値の上界を得られる<br>
 	事を示しました．これにより平均誤差関数と等価な多項式を用意できれば<br>
 	統計モデルの汎化損失の上界を求めることが比較的簡単に出来るようになりました。<br>
-	これは上の項目の研究成果の一部を研究報告として発表したものです。
+	これは上の項目の研究成果の一部を研究報告として発表したものです。<br>
+	<a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=224658&item_no=1">情報学広場の方はこちら</a>
 	</p></li>
 	<li><p><em><a href="https://ken.ieice.org/ken/paper/20220308ZCJ2/">
 	入力が低次元超平面上にあるときの縮小ランク回帰の実対数閾値</a></em>(2021~2022)<br>
